# STL_practice_UNN_381906-3

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  README.md  STL_samples.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  nth_element.sln  nth_element.vcxproj  nth_element.vcxproj.filters  replace_if.vcxproj  replace_if.vcxproj.filters  Леен Аммераль. STL для программистов на C++.djvu
src/: CMakeLists.txt
src/auto_ptr/: CMakeLists.txt  main.cpp
src/remove_copy/: CMakeLists.txt  remove_and_remove_copy.cpp
src/stl_copy_it_insert/: CMakeLists.txt  main.cpp
src/stl_count/: CMakeLists.txt  main.cpp
src/stl_dictionary/: CMakeLists.txt  main.cpp
src/stl_fill/: CMakeLists.txt  fill.cpp
src/stl_for_each/: CMakeLists.txt  main.cpp
src/stl_generate/: CMakeLists.txt  main.cpp
src/stl_merge/: CMakeLists.txt  merge.cpp
src/stl_min_max_and_min_max_element/: CMakeLists.txt  main.cpp
src/stl_remove/: CMakeLists.txt  remove1.cpp  remove2.cpp
src/stl_replace/: CMakeLists.txt  nth_element.cpp  replace_if.cpp
src/stl_reverse_copy/: CMakeLists.txt  main.cpp
src/stl_rotate_stableSort/: CMakeLists.txt  main.cpp
src/stl_setopstr/: CMakeLists.txt  main.cpp
src/stl_sort/: CMakeLists.txt  main.cpp
src/stl_template/: main.cpp
src/stl_transform/: CMakeLists.txt  main.cpp
stl_template/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  stl_template.sln  stl_template.vcxproj  stl_template.vcxproj.filters
stl_template/Debug/: stl_template.ilk
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
(+14 files in other folders)
