
project(STL_samples CXX) 


add_subdirectory (stl_remove)

add_subdirectory(stl_template)

add_subdirectory(stl_dictionary)

add_subdirectory(stl_sort)

add_subdirectory(stl_copy_it_insert)

add_subdirectory(auto_ptr)

add_subdirectory(stl_for_each)

add_subdirectory(stl_count)


add_subdirectory(stl_fill)

add_subdirectory(stl_merge)

add_subdirectory(stl_generate)

