
project(STL_samples CXX) 


add_subdirectory (stl_remove)

add_subdirectory(stl_template)


add_subdirectory(remove_copy)

add_subdirectory(stl_dictionary)

add_subdirectory(stl_sort)

add_subdirectory(stl_copy_it_insert)

add_subdirectory(auto_ptr)

add_subdirectory(stl_for_each)

add_subdirectory(stl_count)


add_subdirectory(stl_fill)

add_subdirectory(stl_merge)

add_subdirectory(stl_generate)


add_subdirectory(stl_min_max_and_min_max_element)

add_subdirectory(stl_reverse_copy)

add_subdirectory(stl_setopstr)


add_subdirectory(stl_transform)


add_subdirectory(stl_replace)

